# robot_ws

./: .gitignore  README.md
VINS-Fusion-ROS2-humble-arm/: .gitignore  BUILD_RUN_ZH.md  D435I_TODAY_CORRECT_SUMMARY_ZH.md  D435I_VINS_RUN_ZH.md  OFFLINE_MONO_DENSE_RECON_ZH.md  README.md  deps_new.sh  get_example_data.sh  install_external_deps.sh  topic_hz_results.txt
VINS-Fusion-ROS2-humble-arm/config/: vins_rviz_config.rviz
VINS-Fusion-ROS2-humble-arm/config/A3_ptgrey/: a3_ptgrey_mono_imu_config.yaml  a3_ptgrey_stereo_config.yaml  a3_ptgrey_stereo_imu_config.yaml  a3_ptgrey_stereo_imu_config_backup.yaml
VINS-Fusion-ROS2-humble-arm/config/euroc/: euroc_mono_imu_config.yaml  euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml
VINS-Fusion-ROS2-humble-arm/config/kitti_odom/: kitti_config00-02.yaml  kitti_config03.yaml  kitti_config04-12.yaml  kitti_config13-21.yaml
VINS-Fusion-ROS2-humble-arm/config/kitti_raw/: kitti_09_30_config.yaml  kitti_10_03_config.yaml
VINS-Fusion-ROS2-humble-arm/config/morroco/: cam0_pinhole.yaml  cam1_pinhole.yaml  mor.yaml
VINS-Fusion-ROS2-humble-arm/config/mynteye/: mynteye_mono_imu_config.yaml  mynteye_stereo_config.yaml  mynteye_stereo_imu_config.yaml
VINS-Fusion-ROS2-humble-arm/config/realsense_d435i/: left.yaml  left_kalibr.yaml  realsense_stereo_imu_config.yaml  realsense_stereo_imu_kalibr_config.yaml  right_kalibr.yaml
VINS-Fusion-ROS2-humble-arm/config/simulation/: simulation_config.yaml
VINS-Fusion-ROS2-humble-arm/config/vi_car/: vi_car.yaml
VINS-Fusion-ROS2-humble-arm/global_fusion/src/: globalOptNode.cpp
VINS-Fusion-ROS2-humble-arm/loop_fusion/: CMakeLists.txt
VINS-Fusion-ROS2-humble-arm/loop_fusion/src/: keyframe.cpp  pose_graph_node.cpp
VINS-Fusion-ROS2-humble-arm/tools/dense_recon/: README.md  export_mono_images.py  monocular_planesweep.py  path_defaults.py  prepare_vins_poses.py  publish_ply_to_rviz.py
VINS-Fusion-ROS2-humble-arm/vins/: CMakeLists.txt
VINS-Fusion-ROS2-humble-arm/vins/launch/: d435i_vins_rviz.launch.xml
VINS-Fusion-ROS2-humble-arm/vins/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
VINS-Fusion-ROS2-humble-arm/vins/src/estimator/: estimator.cpp  parameters.cpp
VINS-Fusion-ROS2-humble-arm/vins/src/utility/: visualization.cpp
camera/: test_usb_camera.py
camera/docs/: 2026-07-17_fisheye_openvins_rtabmap_worklog.md  2026-07-21_hb_stereo_openvins_rtabmap_worklog.md  2026-07-22_d435i_hb_openvins_rtabmap_worklog.md  2026-07-23_hb_calibration_openvins_rtabmap_worklog.md
camera/src/stereo_camera_pkg/: CMakeLists.txt  package.xml
camera/src/stereo_camera_pkg/config/: d435i_infra1_kalibr_camera_info.yaml  d435i_infra2_kalibr_camera_info.yaml  ekf_stereo_wheel.yaml  left.yaml  right.yaml
camera/src/stereo_camera_pkg/launch/: apt_rtabmap.launch.py  calib.launch.py  d435i_kalibr_camera_info.launch.py  ekf_rtabmap.launch.py  left_calibration.launch.py  new_rtabmap.launch.py  new_usb.launch.py  prtabmap.launch.py  rtabmap.launch.py  stereo_camera.launch.py  stereo_rgbd.launch.py  stereo_rtabmap.launch.py  usb.launch.py  usb_v4l2.launch.py
camera/src/stereo_camera_pkg/src/: camera_info.cpp  d435i_kalibr_camera_info_node.cpp  left_camera_node.cpp  new_odom.cpp  right_camera_node.cpp  stereo_camera_node.cpp  stereo_split_node.cpp  stereo_split_node_rgb.cpp
camera/src/stereo_camera_pkg/xml/: usb.launch
camera/src/stereo_camera_pkg_py/: package.xml  setup.cfg  setup.py
camera/src/stereo_camera_pkg_py/config/: d435i_rtabmap_openvins.yaml  ekf.yaml  left.yaml  left1.yaml  left2.yaml  nav.yaml  right.yaml  right1.yaml  right2.yaml  rtabmap_openvins_mapping_params.yaml  rtabmap_openvins_mono_frontend_params.yaml  rviz.rviz
camera/src/stereo_camera_pkg_py/launch/: EKF.launch.py  bag_rtabmap.launch.py  d435i.launch.py  ekf_bag.launch.py  equi_imu_rtabmap.launch.py  hb_highres_imu_rtabmap.launch.py  hb_imu_rtabmap.launch.py  hb_imu_rtabmap_20260723.launch.py  image_rect.launch.py  iortabmap.launch.py  local.launch.py  new_new_rtabmap.launch.py  new_rtabmap.launch.py  rgbd_rtabmap.launch.py  rtabmap.launch.py  rtabmap_openvins_mono_frontend.launch.py  rtabmap_openvins_stereo_mapping.launch.py  slam.launch.py  stereo.launch.py  stereo_calibration.launch.py  v4l2.launch.py
camera/src/stereo_camera_pkg_py/stereo_camera_pkg_py/: stereo_calib.py  stereo_compresseed.py  stereo_info.py  v4l2.py
imu_ws/src/stereo_cam/: package.xml  setup.py
imu_ws/src/stereo_cam/launch/: stereo_cam.launch.py
imu_ws/src/stereo_cam/stereo_cam/: stereo_cam_node.py
imu_ws/src/stereo_v4l2_camera/: CMakeLists.txt  package.xml
imu_ws/src/stereo_v4l2_camera/config/: left.yaml  left_equi.yaml  left_hb.yaml  left_hb_2560.yaml  left_hb_480.yaml  right.yaml  right_equi.yaml  right_hb.yaml  right_hb_2560.yaml  right_hb_480.yaml
imu_ws/src/stereo_v4l2_camera/docs/: 2026-07-15_work_summary.md  2026-07-22_usb_camera_auto_exposure_work_summary.md
imu_ws/src/stereo_v4l2_camera/launch/: direct_usb.launch.py  tst_openvins_20fps.launch.py  tst_yuyv_20fps.launch.py  usb_camera_openvins_15fps.launch.py  usb_camera_openvins_15fps_auto_exposure.launch.py  usb_mjpeg_60fps.launch.py  yuyv_100_to_50fps.launch.py
imu_ws/src/stereo_v4l2_camera/src/: stereo_v4l2_direct_node.cpp
imu_ws/src/wit_imu/: CMakeLists.txt  package.xml  setup.cfg  setup.py
imu_ws/src/wit_imu/docs/: 2026-07-20_wit_imu_replacement_worklog.md
imu_ws/src/wit_imu/launch/: wit_imu.launch.py  wit_imu_new.launch.py
imu_ws/src/wit_imu/src/: wit_imu_node.cpp
imu_ws/src/wit_imu/wit_imu/: wit_imu_node.py
openvins_ws/src/open_vins/docs/: dev-docker.dox  eval-error.dox
openvins_ws/src/open_vins/ov_core/src/: test_tracking.cpp
openvins_ws/src/open_vins/ov_eval/launch/: record.launch
openvins_ws/src/open_vins/ov_msckf/launch/: serial.launch  subscribe.launch
openvins_ws/src/open_vins/ov_msckf/scripts/: run_ros_eth.sh  run_ros_kaist.sh  run_ros_tumvi.sh  run_ros_uzhfpv.sh  run_sim_calib.sh  run_sim_cams.sh  run_sim_featrep.sh
openvins_ws/src/open_vins/ov_msckf/src/: ros1_serial_msckf.cpp
scripts/: build_all.sh  setup_robot_env.sh
