<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wit_imu</name>
  <version>0.0.1</version>
  <description>维特(WIT)串口 IMU 发布为 sensor_msgs/Imu 的 ROS2 节点</description>
  <maintainer email="yahboom@todo.todo">yahboom</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
