<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wit_imu</name>
  <version>0.0.1</version>
  <description>稳定低延迟的维特(WIT)串口IMU ROS 2驱动</description>
  <maintainer email="yahboom@todo.todo">yahboom</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- 原Python节点作为回退版本保留。 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
